assets/prometheus/deployment.yaml
# Prometheus (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      tier: prometheus-connector
  template:
    metadata:
      labels:
        app: prometheus
        tier: prometheus-connector
    spec:
      containers:
        - image: prom/prometheus
          imagePullPolicy: IfNotPresent
          name: prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /prometheus
              name: prometheus-volume-1
            - mountPath: /etc/prometheus/
              name: prom-config-skydive-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: prometheus-volume-1
        - configMap:
            defaultMode: 420
            name: prom-config-skydive
          name: prom-config-skydive-volume
