assets/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
    - name: api
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    tier: prometheus-connector
  sessionAffinity: None
  type: NodePort
  ownerReferences:
    - apiVersion: skydive-group.example.com/v1
      controller: false
      blockOwnerDeletion: false
      kind: Skydive
      name: skydive-sample
