assets/prometheus/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  port:
    targetPort: api
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
  ownerReferences:
    - apiVersion: skydive-group.example.com/v1
      controller: false
      blockOwnerDeletion: true
      kind: Skydive
      name: skydive-sample
